Adding latest files

--- a/personal_flywheel.html
+++ b/personal_flywheel.html
@@ -116,15 +116,15 @@
 
             <div class="col-full s-content__main">
 
-                <p>There is a book - ‘Good to Great’ by Jim Collins which introduces a concept called ‘Flywheel’. I will be (or have written depending on when you read this) a review on the book. But for now, let me describe what a flywheel is, and then share my personal flywheel. </p>
+                <p>There is a book - ‘Good to Great’ by Jim Collins which introduces a concept called ‘Flywheel’. I will be (or have written depending on when you read this) a review on the book. But for now, let me describe what a flywheel is, and then share my own.</p>
 
-                <p>There was a false belief I had that I can have a single purpose in life. The problem – there is no purpose that can be absolutely defined. And trying to live a life with an absolute purpose risk falling into negative traps like ‘religious fundamentalism’, or simply a refusal to learn. </p>
+                <p>There was a false belief I had that I could have a single purpose in life. The problem – there is no purpose that can be absolutely defined. And trying to live a life with an absolute purpose risk falling into negative traps like ‘religious fundamentalism’, or simply a refusal to learn.</p>
 
-                <p>Solution? Flywheel. We may assume that there are no absolute truths. The only thing we may do is keep growing. And to keep growing, I defined a few personal principles that surround a wheel. These principles form an infinite loop and help me grow.</p>
+                <p>Solution? Flywheel. We may assume there are no absolute truths. The only thing we may do is keep growing. And to keep growing, I defined a few personal principles that surround a wheel. These principles form an infinite loop and help me grow.</p>
 
-                <p>But before I explain my personal flywheel, I want to acknowledge those who helped me come up with this. The idea of a flywheel was implanted by my dad’s colleague – Mr. Vipin Jain. He shared his personal flywheel with dad, who later shared it with me. While building my personal flywheel, I strongly relied on concepts from three books. One was – ‘Good to Great’ by Jim Collins, ‘7 Habits of Highly Effective People’ by Stephen Covey, and ‘Getting Things Done’ by David Allen. </p>
+                <p>But before I explain my flywheel, I want to acknowledge those who helped me come up with this. The idea of flywheel was implanted by my dad’s colleague – Mr. Vipin Jain. He shared his personal flywheel with dad, who later shared it with me. While building my personal flywheel, I strongly relied on concepts from three books. One was – ‘Good to Great’ by Jim Collins, ‘7 Habits of Highly Effective People’ by Stephen Covey, and ‘Getting Things Done’ by David Allen.</p>
 
-                <p>Here is how my flywheel works: there are four things that define me. They are – learning, committing to projects, completing the project, rejuvenating/enjoying life. Mr. Stephen Covey, the author of 7 Habits of Highly Effective People, calls this the upward spiral. But in his version, he does not include ‘rejuvenation/enjoying life’. This is my own addition. </p>
+                <p>Here is how my flywheel works: there are four things that define me. They are – learning, committing to projects, completing the project, and rejuvenating/enjoying life. Mr. Stephen Covey, the author of 7 Habits of Highly Effective People, calls this the upward spiral. But in his version, he does not include ‘rejuvenation/enjoying life’. This is my own addition.</p>
 
             </div>
 
@@ -143,18 +143,18 @@
 
 
             <div class="col-full s-content__main">
-                <p><b>Note: The diagram has the ‘have fun’ element missing because of my laziness to make my own figure.</b></p>
+                <p><b>Note: The diagram has the ‘have fun’ element missing.</b></p>
 
-                <p>Now, let us make sense of the ‘upward spiral’. The primary step to grow is to learn. There is a quote I like – “Sow a thought and you reap an action; sow an act and you reap a habit; sow a habit and you reap a character; sow a character and you reap a destiny”. Destiny starts with a thought and thought comes from education. Hence, learning is an essential part of growth.  </p>
+                <p>Now, let us make sense of the ‘upward spiral’. The primary step to grow is learning. There is a quote I like – “Sow a thought and you reap an action; sow an act and you reap a habit; sow a habit and you reap a character; sow a character and you reap a destiny”. Destiny starts with a thought and thought comes from education. Hence, learning is an essential part of growth.</p>
 
-                <p>Once you learn, you find projects. You find things to do. Or you simply define your responsibilities like getting As in your class, or finishing your client project. Committing to projects, especially well-defined projects is an essential step to growth. If you do not define your goal, you cannot form a map on how to get to your destination. </p>
+                <p>Once you learn, you find projects. You find things to do. Or you simply define your responsibilities like getting A’s in your class, or finishing your client project. Committing to projects, especially well-defined projects is an essential step to growth. If you do not define your goal, you cannot form a map on how to get to your destination.</p>
 
-                <p>Then comes the painful but fun part. Finishing the project. This is often the most stressful, but also fun part of the flywheel. It tends to be stressful if the ends are not defined. But if you have clear end goals, God may give you the pleasure of working like an artist – in complete flow. </p>
+                <p>Then comes the painful but fun part. Finishing the project. This is often the most stressful, but fun part of the flywheel. It tends to be stressful if the ends are not defined. But with clear end goals, God may give you the pleasure of working like an artist – in complete flow.</p>
 
-                <p>Finally, my addition. You must rejuvenate and have fun. Do things that keep your integrity and does not make you dull and boring. I like sleep. It makes me happy and healthy. It keeps me in one piece and prevents me from breaking down. I like socializing. I like a lot of things. Without fun, life is dull. Like a great rapper said – ‘work hard, play hard’. </p>
+                <p>Finally, rejuvenation and having fun. Do things that keep your integrity and does not make you dull and boring. I like sleep. It makes me happy and healthy. It keeps me in one piece and prevents me from breaking down. I like socializing, working out, writing, reading, etc. Without fun, life is dull. Like Wiz Khalifa said – ‘work hard, play hard’.</p>
 
-                <p>This flywheel is not complete. To learn, commit, do, and have fun, I defined another flywheel that comprises of principles from ‘7 Habits of Highly Effective People’. I doubt anyone has come down here, but if you did, I do not want to make this article too dense. Or else, you will never read another blog entry of mine. </p>
-
+                <p>This flywheel is not complete. To learn, commit, do, and have fun, I defined another flywheel that comprises of principles from ‘7 Habits of Highly Effective People’. Since I do not want to make this article too dense, I will be writing about it in another entry.</p>
+                
                 <p>Cheers!</p>
 
                 <p></p>
@@ -181,7 +181,6 @@
                     <ul class="s-footer__linklist">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                     </ul>
 
                 </div> <!-- end s-footer__sitelinks -->
@@ -197,15 +196,6 @@
                     </ul>
 
                 </div> <!-- end s-footer__social -->
-
-                <div class="col-five md-full end s-footer__subscribe">
-                        
-                    <h4>About Me</h4>
-
-                    <p>Sit vel delectus amet officiis repudiandae est voluptatem. Tempora maxime provident nisi et fuga et enim exercitationem ipsam. Culpa consequatur occaecati.</p>
-
-
-                </div> <!-- end s-footer__subscribe -->
 
             </div>
         </div> <!-- end s-footer__main -->
