--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                 <p class="lead">I am a third-year computer science student at the University of Minnesota, Twin Cities. I am passionate about exploring. I enjoy randomly choosing something new and diving deep into it. The best way to summarize myself is using four things I actively enjoy – learning, committing to projects, completing the projects, and enjoying life (my personal flywheel).</p>
                 <p>This blog is a resume oriented fun project. I am building this blog using HTML, CSS, and JavaScript, and deploying it in AWS. I am building on a template called ‘Philosophy’ from colorlib (sorry for the technical terms). I plan to do computer science projects and share them to the world using this website. </p>
                 <p>But the fun part is something I am more excited about. Like I said, I enjoy diving deep into new topics. I also enjoy talking. I want to use this blog to write about the things I am diving deep into. Some of the things I enjoy are learning, leadership, business, computer science, finance, sports, travelling, pop culture, not so pop culture (Bruce Springsteen, Billy Joel etc), and a million other things. </p>
-                <p>Lastly, I am a believer in liberal education. I do not believe in absolute truths and know that there is a lot I haven’t learned. If you have any suggestions, or find incorrect facts in my blog, please tell me. I love human interactions. It would really make me happy to gain new perspectives, and if possible, just meeting up and talk. </p>
+                <p>Lastly, I am a believer in liberal education. I do not believe in absolute truths and know that there is a lot I haven’t learned. If you have any suggestions, or find incorrect facts in my blog, please tell me. I love human interactions. It would really make me happy to gain new perspectives, and if possible, just meeting up and talking. </p>
                 <p>Hope my blog keeps you entertained. </p>
                 <p>Cheers!</p>
 
@@ -140,7 +140,6 @@
                     <ul class="s-footer__linklist">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                     </ul>
 
                 </div> <!-- end s-footer__sitelinks -->
