Latest files till the bond article

--- a/ai_art_entertainment.html
+++ b/ai_art_entertainment.html
@@ -88,53 +88,48 @@
 
             <div class="s-content__header col-full">
                 <h1 class="s-content__header-title">
-                    Potential Impact of Russia-Ukraine War on the American Fertilizer Industry
+                    Artificial Intelligence and COVID May Lead to Growth in America’s Recreation Industry
                 </h1>
                 <ul class="s-content__header-meta">
-                    <li class="date">July 5, 2022</li>
+                    <li class="date">August 12, 2022</li>
                 </ul>
             </div> <!-- end s-content__header -->
     
             <div class="s-content__media col-full">
                 <div class="s-content__post-thumb">
-                    <img src="images/fertilizer.jpg" 
-                         sizes="(max-width: 2000px) 100vw, 2000px" alt="" >
+                    <style>
+                        .centerflywheel {
+                        display: block;
+                        margin-left: auto;
+                        margin-right: auto;
+                        width: 70%;
+                        }
+                    </style>
+                    <img src="images/beatles-1000.jpg" 
+                         srcset="images/beatles-2000.jpg 2000w, 
+                                 images/beatles-1000.jpg 1000w, 
+                                 images/beatles-500.jpg 500w" 
+                         class="centerflywheel" alt="" >
                 </div>
             </div> <!-- end s-content__media -->
 
             <div class="col-full s-content__main">
 
-                <p>After the Russia-Ukraine war, the already bottlenecked global fertilizer industry got hurt further. But this raises a thought – if Russian fertilizer exports go down, does that mean American companies will end up supplying more and grow? To evaluate this hypothesis, we will first look at how the Russian war may lead to fertilizer shortages in America. Then we will look at how the US could satisfy the shortage. Finally, we will look at the potential for American fertilizer companies to export to other nations that may be impacted by the war.</p>
+                <p>Artificial Intelligence is simplifying life. Finding information is easier than ever, computers know what we want to do, Alexa keeps track of your alarms and reminders, and in the coming years you may not drive your car or vacuum your home. So, what will be the purpose of our life? My hypothesis is that the simplification AI is bringing, and the trauma of isolation due to COVID is going to lead to Americans finding purpose in arts, recreation, and entertainment. </p>
 
-                <p>Common fertilizer used in America comprises of three components – Nitrogen, Phosphate, and Potash. The US has robust manufacturing of Nitrogen and Phosphate. Only 12% of Nitrogen, and 9% of Phosphate used in America is imported, and none of it comes from Russia or Ukraine. However, we rely heavily on imports for Potash. 93% of Potash used in America is imported, and 12% is imported from Russia and Belarus. Both nations face sanctions till some extent. Therefore, the Russia-Ukraine war may lead to domestic shortage in Potash.</p>
+                <p>Viktor Frankl, in his book ‘Man’s Search for Meaning’ wrote that happiness cannot be pursued. It must ensue. Happiness is a side effect of being driven towards a goal. This is a truth known for centuries. However, if Artificial Intelligence is going to take over our work, we will have lesser things to derive meaning from. And humans will invest more in finding meaningful work through football games, social media, or Dave and Busters.</p>
 
-            </div>
+                <p>My assumption here is that AI is going to be successful in simplifying life. Alexa will provide significant productivity boost, self-driving cars will exist, and Roombas will work just fine. However, if technology does not eliminate problems like climate change or income inequality, these challenges will become the driving forces of our economies.</p>
 
-        </article>
+                <p>Another factor that will determine growth of the arts, recreation, and entertainment industry is the overall economic development. If the amount of free cash in American households increases, the amount of spending towards these industries will grow. If every American household has access to food, shelter, clothing, education, sanitation, and healthcare, along with money and time, they will spend it on having fun. After the World War II, as the economies grew and every household had electricity, we saw the rise of the Beatles, football, basketball, TV and so much more. This trend may be catalyzed as Artificial Intelligence develops. </p>
 
-                <div>
-                <style>
-                .center {
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 50%;
-                    }
-                </style>
-                <img src="images/stats_fertilizer.jpg" class="center">
-                </div>
-        
-        <article class="row format-standard">
-            <div class="col-full s-content__main">
+                <p>In this article, I am missing numbers. The next steps are further evaluating my hypothesis with numbers such as the amount of increase in free time, free cash, and studying historic growth in the entertainment industry especially after World War II. Unfortunately, finding relevant numbers is more challenging than I expected. </p>
 
-                <p>In the US, three companies have roughly 49% market share in the fertilizer manufacturing industry – Cf Industries Holdings, Mosaic Co, and Nutrien Ltd. These companies have resources to produce Potash in the US as well as in Canada. Therefore, there is a possibility that if there is a reduced supply because of the war, and assuming the demand remains roughly the same, they may cash the opportunity. There are many smaller fertilizer manufacturing companies as well, however many are limited in their ability to manufacture Potash.</p>
-                <p>Finally, in 2021, roughly 17.2% of the industry revenue came from exports. And of all the export revenue, 20.6% came from Brazil. Brazil is one of the hardest hit nations for fertilizer because of the war. It imports 85% of its fertilizers of which roughly 50% is from Russia. This leads to US being a potential supplier to Brazil and other nations that may be facing a shortage.</p>
-                <p>Based on the high-level analysis presented in this article, the US fertilizer industry may see growth. However, a few questions that must be evaluated further are – whether the US can increase Potash and other fertilizer production, and could we successfully export fertilizers to other nations.</p>
                 <h2>References</h2>
                 <ul>
-                    <li>Colussi, Joana, et al. “War in Ukraine and Its Effect on Fertilizer Exports to Brazil and the U.S.” Farmdoc Daily, vol. 12, no. 34, Mar. 2022. farmdocdaily.illinois.edu, https://farmdocdaily.illinois.edu/2022/03/war-in-ukraine-and-its-effect-on-fertilizer-exports-to-brazil-and-the-us.html.</li>
-                    <li>Patel, Kush. Fertilizer Manufacturing in the US: 32531. IBISWorld, November 2021.</li>
-                    <li>Polansek, Tom, and Ana Mano. “As Sanctions Bite Russia, Fertilizer Shortage Imperils World Food Supply.” Reuters, 23 Mar. 2022. www.reuters.com, https://www.reuters.com/business/sanctions-bite-russia-fertilizer-shortage-imperils-world-food-supply-2022-03-23/.</li>
+                    <li>Lau, Theodora (Theo). “When AI Becomes a Part of Our Daily Lives.” Harvard Business Review, 23 May 2019. hbr.org, https://hbr.org/2019/05/when-ai-becomes-a-part-of-our-daily-lives.</li>
+                    <li>Lufkin, Bryan. 50 Grand Challenges for the 21st Century. https://www.bbc.com/future/article/20170331-50-grand-challenges-for-the-21st-century. Accessed 12 Aug. 2022.</li>
+                    <li>Troncoso, Kimberly. Arts, Entertainment and Recreation in the USA. Aug. 2022.</li>
                 </ul>
             </div>
         </article>
